--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.14.18",
-    "@mui/material": "^5.14.18",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@videosdk.live/react-sdk": "^0.1.78",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.16.7",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@tiptap/extension-color": "^2.1.16",
     "@tiptap/extension-document": "^2.1.16",
     "@tiptap/extension-gapcursor": "^2.1.16",
@@ -36,6 +35,7 @@
     "@tiptap/pm": "^2.1.16",
     "@tiptap/react": "^2.1.16",
     "@tiptap/starter-kit": "^2.1.16",
+    "@videosdk.live/react-sdk": "^0.1.78",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
@@ -51,18 +51,19 @@
     "prop-types": "^15.8.1",
     "prosemirror-view": "^1.32.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-player": "^2.13.0",
-    "react-bootstrap": "^2.10.0",
     "react-icons": "^5.0.1",
+    "react-player": "^2.13.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "sass": "^1.68.0",
+    "sweetalert2": "^11.10.3",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5",
-    "sweetalert2": "^11.10.3"
+    "wildforge-react-app": "file:",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
