--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,11 @@
-django>=4.0.0,<5.0.0
-djangorestframework
-pyyaml
-requests
-django-cors-headers
-djangorestframework-simplejwt
+django
 pymysql
-mysqlclient==1.4.6
-cryptography
-drf_yasg
 python-dotenv
+djangorestframework
+djangorestframework-simplejwt
+django-cors-headers
+drf-yasg
 drf-nested-routers
+requests
 openai
-channels==4.0.0
+cryptography
