--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,20 @@
-django>=4.0.0,<5.0.0
-djangorestframework
-pyyaml
-requests
-django-cors-headers
-djangorestframework-simplejwt
-pymysql
-mysqlclient==1.4.6
-cryptography
-drf_yasg
-python-dotenv
-drf-nested-routers
-openai
-channels==4.0.0
+Django==4.2.4
+djangorestframework==3.14.0
+djangorestframework_simplejwt==5.3.0
+drf_nested_routers==0.93.5
+drf_yasg==1.21.7
+fitz==0.0.1.dev2
+gunicorn
+ipython==8.12.3
+openai==1.52.2
+Pillow==9.5.0
+Pillow==11.0.0
+protobuf==5.28.3
+PyJWT==2.8.0
+PyJWT==2.9.0
+pymupdf==1.24.12
+PyMySQL==1.1.0
+python-dotenv==1.0.1
+Requests==2.32.3
+rest_framework_simplejwt==0.0.2
+typing_extensions==4.12.2
