--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,4 @@ python-dotenv==1.0.1
 requests==2.32.3  # Correct case: 'Requests' should be 'requests'
 typing_extensions==4.12.2
 django-cors-headers==3.14.0
+google-generative-ai
