--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,15 +3,15 @@ djangorestframework==3.14.0
 djangorestframework_simplejwt==5.3.0
 drf_nested_routers==0.93.5
 drf_yasg==1.21.7
-gunicorn
+gunicorn==23.0.0
 ipython==8.12.3
 openai==1.52.2
-Pillow==11.0.0
-protobuf==5.28.3
+Pillow==9.5.0
+protobuf==4.25.2
 PyJWT==2.9.0 
 PyMySQL==1.1.0
-python-dotenv==1.0.1
-requests==2.32.3 
-typing_extensions==4.12.2
-django-cors-headers==3.14.0
-google-generative-ai
+python-dotenv==1.0.0
+requests==2.30.0 
+typing_extensions==4.12.0
+django-cors-headers==4.2.0
+google-generative-ai==0.5.4
