--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,4 +14,4 @@ python-dotenv==1.0.0
 requests==2.30.0 
 typing_extensions==4.12.0
 django-cors-headers==4.2.0
-google-generative-ai==0.5.4
+google-generativeai==0.5.4
