--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Node.js runtime as the base image for building the app
-FROM node:16-alpine AS builder
+FROM node
 
 # Set the working directory in the container
 WORKDIR /app
