--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,29 +1,11 @@
-# Stage 1: Build the React application
-FROM node:16 AS build
+FROM node
 
-# Set the working directory in the container
 WORKDIR /app
 
-# Copy package.json and package-lock.json to install dependencies separately
-COPY package.json package-lock.json ./
+COPY package.json .
 
-# Install dependencies
-RUN npm install
-
-# Copy the entire project to the working directory
 COPY . .
 
-# Build the app for production
-RUN npm run build
+EXPOSE 3000
 
-# Stage 2: Serve the app with Nginx
-FROM nginx:alpine
-
-# Copy the build output from the previous stage
-COPY --from=build /app/build /usr/share/nginx/html
-
-# Expose the port that Nginx runs on
-EXPOSE 80
-
-# Nginx will automatically serve the files in /usr/share/nginx/html
-CMD ["nginx", "-g", "daemon off;"]
+CMD [ "npm", "start" ]
