--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,29 @@
-FROM node
+# Stage 1: Build the React application
+FROM node:16 AS build
 
+# Set the working directory in the container
 WORKDIR /app
 
-COPY package.json .
+# Copy package.json and package-lock.json to install dependencies separately
+COPY package.json package-lock.json ./
 
+# Install dependencies
+RUN npm install
+
+# Copy the entire project to the working directory
 COPY . .
 
-EXPOSE 3000
+# Build the app for production
+RUN npm run build
 
-CMD [ "npm", "start" ]
+# Stage 2: Serve the app with Nginx
+FROM nginx:alpine
+
+# Copy the build output from the previous stage
+COPY --from=build /app/build /usr/share/nginx/html
+
+# Expose the port that Nginx runs on
+EXPOSE 80
+
+# Nginx will automatically serve the files in /usr/share/nginx/html
+CMD ["nginx", "-g", "daemon off;"]
