--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,4 @@
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 backend/backend/api/migrations/
+backend/backend/activity_work_submissions/
