-Alert user for gemini rate limit - added spinner for loading(submission and work attachment) -

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@
 /backend/venv
 /backend/py_client
 
-
+/backend/nondocker.env
 /backend/backend/api/**/__pycache__/
 # /backend/backend/api/migrations/*
 !/backend/backend/api/migrations/__init__.py
