--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,84 @@
-Django==4.2.4
-djangorestframework==3.14.0
-djangorestframework_simplejwt==5.3.0
-drf_nested_routers==0.93.5
-drf_yasg==1.21.7
-gunicorn==23.0.0
-ipython==8.12.3
-openai==1.52.2
-Pillow==9.5.0
-protobuf==4.25.2
-PyJWT==2.9.0 
-PyMySQL==1.1.0
-python-dotenv==1.0.0
-requests==2.30.0 
-typing_extensions==4.12.0
-django-cors-headers==4.2.0
-google-generativeai==0.5.4
+annotated-types==0.7.0
+anyio==4.7.0
+asgiref==3.8.1
+asttokens==3.0.0
+backcall==0.2.0
+boto3==1.35.76
+botocore==1.35.76
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
 cryptography==3.4.8
+decorator==5.1.1
+distro==1.9.0
+Django==4.2.4
+dj-database-url==2.2.0
+django-cors-headers==4.2.0
+django-storages==1.14.4
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
+drf-nested-routers==0.93.5
+drf-yasg==1.21.7
+exceptiongroup==1.2.2
+executing==2.1.0
+google-ai-generativelanguage==0.6.4
+google-api-core==2.23.0
+google-api-python-client==2.154.0
+google-auth==2.36.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.5.4
+googleapis-common-protos==1.66.0
+grpcio==1.68.1
+grpcio-status==1.62.3
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.0
+idna==3.10
+inflection==0.5.1
+ipython==8.12.3
+jedi==0.19.2
+jiter==0.8.0
+matplotlib-inline==0.1.7
+mysqlclient==2.2.0
+openai==1.52.2
+packaging==24.2
+parso==0.8.4
+pickleshare==0.7.5
+Pillow==9.5.0
+prompt_toolkit==3.0.48
+proto-plus==1.25.0
+protobuf==4.25.2
+psycopg2==2.9.10
+pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
+PyJWT==2.9.0
 PyMuPDF==1.24.11
+PyMySQL==1.1.0
+pyparsing==3.2.0
+python-dotenv==1.0.0
+pytz==2024.2
+PyYAML==6.0.2
+requests==2.30.0
+rsa==4.9
+sniffio==1.3.1
+sqlparse==0.5.2
+stack-data==0.6.3
+tqdm==4.67.1
+traitlets==5.14.3
+typing_extensions==4.12.0
+tzdata==2024.2
+uritemplate==4.1.1
+urllib3==2.2.3
+uvicorn==0.32.1
+wcwidth==0.2.13
+whitenoise==6.8.2
