--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@tiptap/react": "^2.1.16",
     "@tiptap/starter-kit": "^2.1.16",
     "@videosdk.live/react-sdk": "^0.1.78",
+    "ajv-keywords": "^5.1.0",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
@@ -60,6 +61,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "sass": "^1.68.0",
+    "schema-utils": "^4.3.0",
     "sweetalert2": "^11.10.3",
     "web-vitals": "^2.1.4",
     "wildforge-react-app": "file:",
