--- a/frontend/package.json
+++ b/frontend/package.json
@@ -97,6 +97,7 @@
     "@babel/eslint-parser": "^7.22.15",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-react": "^7.22.15",
+    "ajv": "^7.2.4",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.53.0",
